[package]
name = "swapbytes"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28.0"
libp2p = { version = "0.53.2", features = ["tokio", "ping", "rendezvous", "identify", "gossipsub", "mdns", "noise", "macros", "tcp", "quic", "yamux", "request-response", "kad"] }
libp2p-request-response = { version = "0.26.3", features = ["cbor"] }
tokio = { version = "1.38.1", features = ["full"] }
async-trait = "0.1.81"
futures = "0.3.30"
log = "0.4"
fern = "0.6"
chrono = "0.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.10"
lazy_static = "1.4"
tui-big-text = "0.6.0"
derive_setters = "0.1.6"
lipsum = "0.9.1"